--- a/egalaxySB/src/main/resources/application.properties
+++ b/egalaxySB/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=hr
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
 server.port=9999
+server.servlet.context-path=/egalaxy
