--- a/egalaxySB/src/main/resources/application.properties
+++ b/egalaxySB/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=hr
@@ -7,4 +7,4 @@ spring.datasource.password=hr
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
 server.port=9999
-server.servlet.context-path=/egalaxy
+server.servlet.context-path=/eGalaxy
