--- a/eGalaxySB_latest/eGalaxySB/bin/src/main/resources/application.properties
+++ b/eGalaxySB_latest/eGalaxySB/bin/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl1
 spring.datasource.username=hr
 spring.datasource.password=hr
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.show-sql=true
- 
+
 #--configure apache tomcat port
 
 server.port=9999
